General improvements to the UI, event table, sync, and snapshot feature

--- a/sync.html
+++ b/sync.html
@@ -16,6 +16,9 @@
     <input type = "email" id = "email_to_share" placeholder = "Email" required>
     <button id = "share-btn">Share</button>
     <p id = "error_share-msg"></p>
+
+    <div id="profile-data"></div>  <!-- very temporary, DO NOT FORGET TO DELETE -->
+
     <a href = "calendar.html"> Cancel </a>
 
 </div>
