--- a/event.html
+++ b/event.html
@@ -27,7 +27,8 @@
     <h3> Enter event name: </h3>
     <input type = "text" id = "name_event" placeholder = "Event" required>
     <button id = "eventInput-btn">Save</button>
-    <p id = "error-msg">Error</p>
+    <button id = "eventInputShare-btn">Save & Send</button>
+    <h6>  </h6>
     <a href = "calendar.html"> Cancel </a>
 
 </div>
