--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Login</title>
     <link rel = "stylesheet" href="style.css">
 </head>
+<style>
+    body {
+        font-family: "Times New Roman", sans-serif;
+        margin: 15px; /* Remove default margin */
+        background-color: #ffabc3;
+        position: relative; /* Set position to relative for absolute positioning of children */
+    }
+</style>
+
 <body>
 <div class = "container">
     <h2>Login</h2>
