--- a/signup.html
+++ b/signup.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,14 @@
     <title>Signup</title>
     <link rel = "stylesheet" href="style.css">
 </head>
+<style>
+    body {
+        font-family: "Times New Roman", sans-serif;
+        margin: 15px; /* Remove default margin */
+        background-color: #ffabc3;
+        position: relative; /* Set position to relative for absolute positioning of children */
+    }
+</style>
 <body>
 <div class = "container">
     <h2>Sign Up</h2>
