--- a/accept_share.html
+++ b/accept_share.html
@@ -1,23 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Accept request</title>
+    <title>Sync with another user</title>
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
 <div class = "container">
 
-    <h2>Accept share request?</h2>
+    <h2>Input Sync ID of other party:</h2>
+    <input type = "password" id = "Sync_ID" placeholder = "Sync ID" required>
+    <button id = "yesSnapBtn">CONTINUE WITH SNAP ---></button>
 
-    <button id = "accept">Accept</button>
-    <button id = "deny">Deny</button>
-    <p id = "error_sync_accept-msg"></p>
-    <a href = "calendar.html"> Cancel </a>
+    <a href = "sync.html"> Cancel </a>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src = "auth.js"></script>
+<script src = "sync.js"></script>
 </body>
 </html>
