--- a/update.html
+++ b/update.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +14,7 @@
     <button id="updateLn-btn">Update</button>
     <input type="text" id="city" placeholder="City" >
     <button id="updateC-btn">Update</button>
+    <button id="updateS-btn">Update sync id (randomized)</button>
     <p id="error-msg"></p>
     <a href="profile.html">Back to display</a>
 </div>
