For Almost final testing

--- a/event.html
+++ b/event.html
@@ -9,17 +9,8 @@
 <body>
 <div class = "container">
     <h2>Input Event</h2>
-    <h3> Select day of the week </h3>
-    <select id="dayDropdown">
-        <option value="">--Select a Day--</option>
-        <option value="Sunday">Sunday</option>
-        <option value="Monday">Monday</option>
-        <option value="Tuesday">Tuesday</option>
-        <option value="Wednesday">Wednesday</option>
-        <option value="Thursday">Thursday</option>
-        <option value="Friday">Friday</option>
-        <option value="Saturday">Saturday</option>
-    </select>
+    <h3> Enter event date: </h3>
+    <input type = "date" id = "event_date" required>
     <h3> Enter start time: </h3>
     <input type = "time" id = "event_time_start" placeholder = "Time for event" required>
     <h3> Enter end time: </h3>
