--- a/accept_share.html
+++ b/accept_share.html
@@ -11,11 +11,25 @@
     <h2>Input Sync ID of other party:</h2>
     <input type = "password" id = "Sync_ID" placeholder = "Sync ID" required>
     <button id = "yesSnapBtn">CONTINUE WITH SNAP ---></button>
-
     <a href = "sync.html"> Cancel </a>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src = "sync.js"></script>
+<!-- JavaScript for Theme Toggle -->
+<script>
+    const toggleBtn = document.getElementById('theme-toggle');
+
+    // Apply saved theme on load
+    if (localStorage.getItem('theme') === 'light') {
+        document.body.classList.add('light-mode');
+    }
+
+    toggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light-mode');
+        const newTheme = document.body.classList.contains('light-mode') ? 'light' : 'dark';
+        localStorage.setItem('theme', newTheme);
+    });
+</script>
 </body>
 </html>
