--- a/signup.html
+++ b/signup.html
@@ -7,9 +7,9 @@
 </head>
 <style>
     body {
-        font-family: "Times New Roman", sans-serif;
+        font-family: "Copperplate Gothic Bold", sans-serif;
         margin: 15px; /* Remove default margin */
-        background-color: #ffabc3;
+        background-color: #b1aeb5;
         position: relative; /* Set position to relative for absolute positioning of children */
     }
 </style>
@@ -28,5 +28,20 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src = "auth.js"></script>
+<!-- JavaScript for Theme Toggle -->
+<script>
+    const toggleBtn = document.getElementById('theme-toggle');
+
+    // Apply saved theme on load
+    if (localStorage.getItem('theme') === 'light') {
+        document.body.classList.add('light-mode');
+    }
+
+    toggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light-mode');
+        const newTheme = document.body.classList.contains('light-mode') ? 'light' : 'dark';
+        localStorage.setItem('theme', newTheme);
+    });
+</script>
 </body>
 </html>
