--- a/sync.html
+++ b/sync.html
@@ -16,13 +16,26 @@
     <input type = "email" id = "email_to_share" placeholder = "Email" required>
     <button id = "share-btn">Share</button>
     <p id = "error_share-msg"></p>
-
     <div id="profile-data"></div>  <!-- very temporary, DO NOT FORGET TO DELETE -->
-
     <a href = "calendar.html"> Cancel </a>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src = "sync.js"></script>
+<!-- JavaScript for Theme Toggle -->
+<script>
+    const toggleBtn = document.getElementById('theme-toggle');
+
+    // Apply saved theme on load
+    if (localStorage.getItem('theme') === 'light') {
+        document.body.classList.add('light-mode');
+    }
+
+    toggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light-mode');
+        const newTheme = document.body.classList.contains('light-mode') ? 'light' : 'dark';
+        localStorage.setItem('theme', newTheme);
+    });
+</script>
 </body>
 </html>
