--- a/update.html
+++ b/update.html
@@ -15,10 +15,28 @@
     <input type="text" id="city" placeholder="City" >
     <button id="updateC-btn">Update</button>
     <button id="updateS-btn">Update sync id (randomized)</button>
+
     <p id="error-msg"></p>
     <a href="profile.html">Back to display</a>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="data.js"></script>
+<script src="theme.js"></script>
+<!-- JavaScript for Theme Toggle -->
+<script>
+    const toggleBtn = document.getElementById('theme-toggle');
+
+    // Apply saved theme on load
+    if (localStorage.getItem('theme') === 'light') {
+        document.body.classList.add('light-mode');
+    }
+
+    toggleBtn.addEventListener('click', () => {
+        document.body.classList.toggle('light-mode');
+        const newTheme = document.body.classList.contains('light-mode') ? 'light' : 'dark';
+        localStorage.setItem('theme', newTheme);
+    });
+</script>
 </body>
 </html>
